# pymark

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
pymark/: __init__.py  _pymark.pyi
src/: pymark.cpp
tests/: test_basic.py
